[package]

name = "hangende"
version = "0.0.1"
authors = [ "Liviu Dumea <liviu.dumea.ro@gmail.com>" ]

[[bin]]
name = "hangende"


[dependencies]
conrod = "*"
find_folder = "0.2.0"
pistoncore-input = "0.5.0"
piston2d-graphics = "0.8.0"
piston-viewport = "0.1.0"
piston_window = "0.19.0"
piston2d-gfx_graphics = "0.8.0"
piston2d-opengl_graphics = "0.10.0"
pistoncore-glutin_window = "0.12.0"
piston = "0.10.0"
bitflags = "*"
clock_ticks = "0.0.6"
elmesque = "0.7.0"
json_io = "0.1.2"
petgraph = "0.1.10"
num = "*"
rand = "*"
rustc-serialize = "*"
vecmath = "0.1.1"

[dev-dependencies]
find_folder = "0.2.0"
gfx = "0.7.0"
gfx_device_gl = "0.5.0"
piston-viewport = "0.1.0"
piston_window = "0.19.0"
piston2d-gfx_graphics = "0.8.0"
piston2d-opengl_graphics = "0.10.0"
pistoncore-glutin_window = "0.12.0"
piston = "0.10.0"
